style.css
body {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 97vh;
    width: auto;
}

#container {
    display: flex;
    width: 550px;
    height: 550px;
    flex-wrap: wrap;
    border: solid 1px black;
}

.grid {
    display: flex;
    border: 1px solid rgb(165, 165, 174);
    padding: 0;
    margin: 0;
}

